@@ -1,1 +1,2 @@
  * Correction de la recherche de l'OTP #780
+ * Correction de champ OTP vide après sélection #781
