@@ -1,5 +1,6 @@
 KeePassDX(2.9.2)
  * Fix search in OTP #780
+ * Fix empty OTP field after selection #781
 
 KeePassDX(2.9.1)
  * Copy password from generator #697
